--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,8 @@
 [submodule "DaisySP"]
 	path = DaisySP
 	url = https://github.com/electro-smith/DaisySP
-[submodule "DaisyExamples"]
-	path = DaisyExamples
-	url = https://github.com/electro-smith/DaisyExamples
+# disabled: has very large (1GB) pack files
+# [submodule "DaisyExamples"]
+# 	path = DaisyExamples
+# 	url = https://github.com/electro-smith/DaisyExamples
+# 	shallow = false
